# pepper-CPG-ros

./: README.md  hands_tracking_node.py  package.xml  setup.cfg  setup.py  subsciber-script-for-pepper.py  x_pixel_subscriber.py
